[package]
name = "retro-rs"
version = "0.5.6"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
edition = "2024"
description = "A Rust front-end for libretro cores."
license = "Apache-2.0"
repository = "https://github.com/JoeOsborn/retro-rs"

[dependencies]
libloading = "0.8.6"
rust-libretro-sys = "0.3.2"
libc = "0.2"
image = {version="0.25.6",optional=true}
surfman = {version="0.10.0",optional=true}
euclid = {version="0.22", optional=true}

[features]
default = ["use_image", "gl"]

use_image = ["image"]
gl = ["surfman", "euclid"]