[package]
name = "retro-rs"
version = "0.5.6"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
edition = "2024"
description = "A Rust front-end for libretro cores."
license = "Apache-2.0"
repository = "https://github.com/JoeOsborn/retro-rs"

[dependencies]
libloading = "0.8.6"
rust-libretro-sys = "0.3.2"
libc = "0.2"
image = {version="0.25.6",optional=true}
euclid = {version="0.22", optional=true}
gl = {version="0.14", optional=true}

[target.'cfg( target_os = "linux" )'.dependencies]
surfman = {version="0.10.0",optional=true,features=["sm-x11"]}

[target.'cfg( not(target_os = "linux") )'.dependencies]
surfman = {version="0.10.0",optional=true}

[build-dependencies]
cc = "1.0"

[dev-dependencies]
renderdoc = "0.12.1"

[features]
default = ["use_image", "use_gl"]

use_image = ["image"]
use_gl = ["surfman", "euclid", "gl"]